2006-11-10  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m (rowAtPoint:): Return -1 if the point is under 
	the last row.
	(mouseDown:): Handle rowAtPoint: returning -1.
	(rectOfRows:): Ditto.
	
2006-11-10  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m (mouseDown:): Rename some local variables
	to be less ambiguous.

2006-11-10  Matt Rice  <ratmice@gmail.com>

	* Headers/AppKit/NSTableView.h: Add ivar for
	verticalMotionCanBeginDrag.
	* Source/NSTableView.m: Implement verticalMotionCanBeginDrag
	bump class version.
	* Source/NSTextView_actions.m: Fix method name from previous changes.
	* KeyBindings/DefaultKeyBindings.dict: Add new key bindings.
	* ChangeLog: Add to description of a previous change.

2006-11-09  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m (selectContiguousRegion): Remove usage of
	offsets.

2006-11-08  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m: Implement keyboard navigation/selection.
	Fixes bug #11942.
	(-selectRow:byExtendingSelection:): Update _clickedRow.
	(-mouseDown:): Ditto.
	* Source/NSSlider.m (keyDown:): Call supers implementation if we don't
	use the key stroke.

2006-11-07  Matt Rice  <ratmice@gmail.com>
	
	* Source/NSTableView.m: Whitespace changes to conform to coding
	standards.

2006-11-07  Matt Rice  <ratmice@gmail.com>

	* Source/NSTableView.m (-mouseDown): Only call editWithFrame: from a
	double click. Don't track cells from a mouse dragged.
	Add comments.

2006-11-06  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTextView_actions.m: Fix keyboard movement scrolling 
	when selecting text off the bottom or right of the visible area.

2006-11-06  Matt Rice  <ratmice@yahoo.com>

	* Source/NSTextView_actions.m: Remove hack from previous patch.

2006-11-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDisplayServer.m: Improve documentation of window ordering
	* Source/NSWindow.m: ditto
	* Source/NSApplication.m: Fix minor bug with cleanup on termination
	when the appicon was suppressed.